--- a/Levels A1 and A2/1. Adjectives_and_prepositions.md
+++ b/Levels A1 and A2/1. Adjectives_and_prepositions.md
@@ -206,3 +206,6 @@ satisfied with
 ### Exercises:
 - I'm bad at reading T&Cs
 - I'm skilled at Data Modelling
+- I'm skilled at working in complex environments with tight deadlines
+- I'm delighted by the company's ways of working and technologies used. 
+- I'm am certain of my decision to work at this company 
