feat: new exercises

--- a/Levels A1 and A2/1. Adjectives_and_prepositions.md
+++ b/Levels A1 and A2/1. Adjectives_and_prepositions.md
@@ -208,4 +208,11 @@ satisfied with
 - I'm skilled at Data Modelling
 - I'm skilled at working in complex environments with tight deadlines
 - I'm delighted by the company's ways of working and technologies used. 
-- I'm am certain of my decision to work at this company 
+- I am certain of my decision to work at this company 
+- I am certain of my willingness to work here
+
+- When you are kind to someone, that person will remember
+- I am delighted with the presence of my partner
+- We have to go is independent of your decision 
+- I am prepared for what is coming
+- I am capable of leading the conversation 
