--- a/Levels A1 and A2/1. Adjectives_and_prepositions.md
+++ b/Levels A1 and A2/1. Adjectives_and_prepositions.md
@@ -216,3 +216,6 @@ satisfied with
 - We have to go is independent of your decision 
 - I am prepared for what is coming
 - I am capable of leading the conversation 
+
+- I am fed up with money conversations with my family
+ß
