innitial commit: negotiation techniques

--- a/Levels A1 and A2/1. Adjectives_and_prepositions.md
+++ b/Levels A1 and A2/1. Adjectives_and_prepositions.md
@@ -218,4 +218,5 @@ satisfied with
 - I am capable of leading the conversation 
 
 - I am fed up with money conversations with my family
-ß
+- I am furious with the recruitment industry in the UK
+- I am fed up with the recruiters ghosing me all the time
