feat: new lesson

--- a/0. Negotiation_Techniques.md
+++ b/0. Negotiation_Techniques.md
@@ -1,7 +1,83 @@
 
 # Negotiation techniques 
 
+- Acknowledging the other person's situation, you immediately convey that you are listening. And once they know that you are listening, they may tell you something that you can use
+- The reasons why a counterpart will not make an agreeement with you are often more powerful than why they will make a deal, so focus first on clearing the bareers to agreement . Denying barriers or negative influences gives them credence; get them into the open. 
+
+- Pause after a label or mirror 
+- Label your conterpart's fears to diffuse their power. We all want to talk about the happy stuff, but remember the faster you interrupt action in your counterpart, the part of the brain that generates fear, the faster you can generate feelings of safety. 
+
+- List the worst things that the other party could say about you and say them before the other person can.Performing an accusation audit in advance prepares you to head off negative dynamics before they take root. And because these accusations often sound exaggerated when said aloud, speaking them will encourage the other person to claim the opposite
+
+- Remember that you are dealing with a person that wants to be appreciated and understood. So use labels to reinforce and encourage positive perceptions and dynamics 
+
+
+Restarting a Conversation and stop people from ghosting you
 1. Is now a bad time to talk?
+    If they say yes, 
+2. Is it a ridiculous idea for you to...
+3. Are you against... 
+4. Have you given up on x...
+
+### Opener
+How are you today? 
+It sounds like you have a place you want to start
+
+### Creating a bond
+Here is what you are up against... -> That's right
+
+### Affect shifts
+When you want to know why its causing the affect shift
+It seems like you are uncomfortable with that
+It seems like you are hesitant
+
+### Labelling
+It sounds like you have a reason for saying that?
+It sounds like you have a reason for doing that?
+
+### Never make concessions 
+It sounds like there is nothing I can say to get you to change your mind
+It seems like the value is not there for you? (What they are getting there for you)
+It doesn't seem like you are ready to make a commitment (to me)
+It seems like you are still shopping around 
+
+### Email Tactics
+- Deliver bad news: I've got something that you are not going to like to hear - let people embrace themselves for the worst
+    - I'm sorry/I'm afraid 
+
+- Tone: Emails do have tone always. Always take the mood of the reader. You have no control. 
+    - Email softeners I'm sorry/I'm afraid (i.e.) this doesn't get solved...
+    - Try read them out loud in the worst possible voice you can imagine
+    - Finish the email positively tell the truth. Last impression is a lasting impression.   
+- Less is more
+- Closing an email:
+    - Best Regards -> The very best regards, 
+    - Humbly: when asking for something
+
+### Linkedin
+    - Hi Dereck,
+        You must be incredibly busy right now, 
+        and you are probably wondering why I am messaging you. 
+        I saw that you posted a BA role on LinkedIn and wanted to 
+        know if you would be willing to review my attached CV and
+        let me know if you would consider me as a candidate for
+        this role.
+      The very best wishes, 
+      Miguel 
 
 
-2. 
+    - Disappointment
+        This is going to sound harsh. Every single thing that you  
+        have delivered I am afraid has been delivered in a standard
+        that I am sorry but we can not share with anybody that we 
+        are trying to train. I am asking myself why we should not 
+        pay for what you've delivered, but also why should I not 
+        deliver all my money back. My problem is I think the world 
+        of you personally and always enjoyed working with you and I 
+        hope in 10 years we look back in a prosperous relationship.
+        How do you want to proceed?
+
+    - Not positive response
+        Seems like you have a very good reason for rejecting me. 
+
+
