--- a/0. Negotiation_Techniques.md
+++ b/0. Negotiation_Techniques.md
@@ -1,7 +1,7 @@
 
 # Negotiation techniques 
 
-- Acknowledging the other person's situation, you immediately convey that you are listening. And once they know that you are listening, they may tell you something that you can use
+- By acknowledging the other person's situation, you immediately convey that you are listening. And once they know that you are listening, they may tell you something that you can use
 - The reasons why a counterpart will not make an agreeement with you are often more powerful than why they will make a deal, so focus first on clearing the bareers to agreement . Denying barriers or negative influences gives them credence; get them into the open. 
 
 - Pause after a label or mirror 
@@ -80,4 +80,42 @@ It seems like you are still shopping around
     - Not positive response
         Seems like you have a very good reason for rejecting me. 
 
+### Salary Negotiation
 
+Here's what you are up against...
+- Interviews by team
+    - The least Talkative? is sometimes the most important/valuable on the other side of the table and they are sick of interviewing candidates that do not listen to them. 
+        - Read the room and be prepared to be Silence
+        - be prepared to count thausands
+    -  Salary 
+        Morgan Mckinley:
+        -   Data Analyst 
+            - 3-5 year 60-75k
+            - 5+ years plus 75k - 85k
+        - Technical Business Analyst (Projects):
+            - 3-5 year 55k - 70k
+            - 5+ years 70k - 90k 
+        
+        - Michael Page
+            - Data Analyst 45k - 55k
+            - Business Analyst 50k - 70k
+        - Reed
+            - Change Management: Business Analysis min 82700 average 91400
+
+
+### Interview Questions 
+
+- Mirror
+    - 
+
+- Labelling
+
+    - What are some of the benefits of 
+    
+    - It seems like you are looking for someone who is technical but at the same time has the Business Analysis and soft skills. WAIT 
+
+    - It looks like you want people with snowflake and databricks skills
+    - Would you not take in people without a vast amount of experience in Databricks?
+
+    
+    - What does success look like in this company? 
