--- a/Levels A1 and A2/1. Adjectives_and_prepositions.md
+++ b/Levels A1 and A2/1. Adjectives_and_prepositions.md
@@ -220,3 +220,8 @@ satisfied with
 - I am fed up with money conversations with my family
 - I am furious with the recruitment industry in the UK
 - I am fed up with the recruiters ghosing me all the time
+- I am interested in sports 
+- It sounds like you love the idea of being committed to watching the premier league every weekend
+
+- Here is what you are up against, the company is excited by the the implementation of the new ERP implementation and you need to test that the hierarchies and dependencies are set up appropriately.
+- I am jealous of my manager 
