--- a/Levels A1 and A2/2. Nouns_countable_and_uncountable.md
+++ b/Levels A1 and A2/2. Nouns_countable_and_uncountable.md
@@ -65,3 +65,9 @@ However, in negative sentences we use not many with countable nouns and not much
 Go to Countable and uncountable nouns 2 to learn more.
 
 - Try this exercise to test your grammar again.
+
+
+### Exercises
+
+- Is here any chance you could tell me what was the tie breaker
+- Is there some advice for me to improve career wise
