--- a/Levels A1 and A2/3. Possessive.md
+++ b/Levels A1 and A2/3. Possessive.md
@@ -33,3 +33,6 @@ If a name or noun ends in s, we can add either ' or 's. The pronunciation can be
 
 #### Exercise
 - That's Celina's bag
+- Ella's boyfriend is Australian
+- My parents' farm house has been completed
+- 
