--- a/2. Projec_management.md
+++ b/2. Projec_management.md
@@ -1,5 +1,5 @@
 
-## The project life cycle
+# The project life cycle
 
 ### Initiate the project
 In this phase, ask questions to help set the foundation for the project, such as:
@@ -49,5 +49,52 @@ Each phase of the project life cycle has its own significance and reason for exi
 - Setting your project up for success with a plan
 - Executing project tasks and addressing any issues that arise 
 - Closing out your project to capture any lessons learned 
+
+# Learning Organization's Culture
+
+It is important to learn about the culture of the organization where you work or want to work. Understanding the company’s culture can help you navigate your team through a project. Consider this quote from Peter Drucker, an expert on management: "Culture eats strategy for breakfast." Drucker is implying that the culture of a company always influences its success, regardless of how effective the company’s business model may be.
+
+### Ask questions
+You can learn about an organization's culture by asking questions of management and peers. It can be helpful to ask these questions in the interview phase to better understand the company’s culture before accepting a position. You might want to ask questions about:
+
+### Atmosphere
+- What is the company’s dress code? 
+- How do people typically share credit at this company? 
+- Is risk-taking encouraged, and what happens when people fail?
+- How do managers support and motivate their team?
+- How do people in this role interact with customers and users?
+- When and how do team members give feedback to one another?
+- What are some workplace traditions?
+- What are some of the ways the company celebrates success?
+
+### Policies
+- What are the policies around sick days and vacation?
+- Does the company allow for employee flexibility (e.g., working from home, flexible working hours)?
+- What policies are in place that support employees sharing their identity in the workplace?
+
+### Processes
+- What is the company’s onboarding process?
+- How do employees measure the impact of their work?
+
+### Values
+- What are the company’s mission and value statements?
+- How might the person in this role contribute to the organization’s mission?
+- How does the organization support professional development and career growth?
+
+### Listen to people’s stories
+Listening to what current employees have to say and how they portray the company will give you great insight.
+
+- What were employees' experiences with similar projects in the past? 
+- What can they tell you about key stakeholders and customers? 
+
+### Take note of company rituals
+Rituals can be powerful drivers of culture. They engage people and help instill a sense of shared purpose and experience. 
+
+- How are birthdays and holidays celebrated? 
+- Do employees generally eat lunch at the same time and in the same place? 
+
+Watch employee interactions: Observing how employees interact can help you tailor your interaction style to the company norm. 
+- Are employee interactions more formal or informal in nature? 
+- Are ideas solicited from employees in different roles? 
 
 
