feat: updates 6 Jun

--- a/2. Projec_management.md
+++ b/2. Projec_management.md
@@ -1,7 +1,10 @@
 
-# The project life cycle
 
-### Initiate the project
+[Project Life Cycle]
+
+## The project life cycle
+
+#### Initiate the project
 In this phase, ask questions to help set the foundation for the project, such as:
 
 - Who are the stakeholders?
@@ -13,7 +16,7 @@ In this phase, ask questions to help set the foundation for the project, such as
 - What skills and resources will the project require? 
 - What will the project cost? What are the benefits?
 
-### Make a plan
+#### Make a plan
 In this phase, make a plan to get your project from start to finish. 
 
 Create a detailed project plan. 
@@ -22,7 +25,7 @@ Create a detailed project plan.
 
 Build out the schedule so you can properly manage the resources, budget, materials, and timeline. Here, you will create an itemized budget.
 
-### Execute the project
+#### Execute the project
 In this phase, put all of your hard work from the first two phases into action. 
 - Monitor your project team as they complete project tasks. 
 - Break down any barriers that would slow or stop the team from completing tasks. 
@@ -30,7 +33,7 @@ In this phase, put all of your hard work from the first two phases into action.
 - Address weaknesses in your process or examine places where your team may need additional training to meet the project’s goals.
 - Adapt to changes in the project as they arise.
 
-### Close the project
+#### Close the project
 In this phase, close out the project.
 
 - Identify that your team has completed all of the requested outcomes. 
@@ -50,14 +53,14 @@ Each phase of the project life cycle has its own significance and reason for exi
 - Executing project tasks and addressing any issues that arise 
 - Closing out your project to capture any lessons learned 
 
-# Learning Organization's Culture
+## Learning Organization's Culture
 
 It is important to learn about the culture of the organization where you work or want to work. Understanding the company’s culture can help you navigate your team through a project. Consider this quote from Peter Drucker, an expert on management: "Culture eats strategy for breakfast." Drucker is implying that the culture of a company always influences its success, regardless of how effective the company’s business model may be.
 
-### Ask questions
+#### Ask questions
 You can learn about an organization's culture by asking questions of management and peers. It can be helpful to ask these questions in the interview phase to better understand the company’s culture before accepting a position. You might want to ask questions about:
 
-### Atmosphere
+#### Atmosphere
 - What is the company’s dress code? 
 - How do people typically share credit at this company? 
 - Is risk-taking encouraged, and what happens when people fail?
@@ -67,27 +70,27 @@ You can learn about an organization's culture by asking questions of management 
 - What are some workplace traditions?
 - What are some of the ways the company celebrates success?
 
-### Policies
+#### Policies
 - What are the policies around sick days and vacation?
 - Does the company allow for employee flexibility (e.g., working from home, flexible working hours)?
 - What policies are in place that support employees sharing their identity in the workplace?
 
-### Processes
+#### Processes
 - What is the company’s onboarding process?
 - How do employees measure the impact of their work?
 
-### Values
+#### Values
 - What are the company’s mission and value statements?
 - How might the person in this role contribute to the organization’s mission?
 - How does the organization support professional development and career growth?
 
-### Listen to people’s stories
+#### Listen to people’s stories
 Listening to what current employees have to say and how they portray the company will give you great insight.
 
 - What were employees' experiences with similar projects in the past? 
 - What can they tell you about key stakeholders and customers? 
 
-### Take note of company rituals
+#### Take note of company rituals
 Rituals can be powerful drivers of culture. They engage people and help instill a sense of shared purpose and experience. 
 
 - How are birthdays and holidays celebrated? 
@@ -97,4 +100,47 @@ Watch employee interactions: Observing how employees interact can help you tailo
 - Are employee interactions more formal or informal in nature? 
 - Are ideas solicited from employees in different roles? 
 
+## Change management
+Your project’s success depends on the adoption and acceptance of your project—whether that entails the launch of a new external tool or a process that will change operations at a production facility. In both cases, the greatest impact of the change will be on the people who use and interact with the product or process that is changing. 
 
+Change management is a major undertaking and a project in and of itself. When it comes to change management, you may not always be responsible for leading and planning the entire end-to-end process. There will be times when your manager, a team member, or another senior leader might be responsible for taking on that transition and successfully implementing the changes. However, although you may not be the one directly leading the change, there are still ways in which you can support and participate in the successful adoption of your project. 
+
+When you are thinking about change management as it relates to your project, begin by asking yourself the following questions:
+
+- How will the organization react to change?
+- Which influencers can affect change?
+- What are the best means of communication? 
+- What change management practices will lead to the successful implementation of my project? 
+
+The answers to these questions will help you prepare for a variety of possible scenarios and allow you to craft solutions to effectively support the adoption of your project. 
+
+#### Be proactive.
+ 
+Proactive and inclusive change management planning can help keep any potentially impacted stakeholders aware of the upcoming changes.
+
+- Incorporate change management into your project management steps. For example, you can schedule time during team meetings or create a feedback document to ensure that your team members know there is a place to voice their suggestions and concerns
+
+- You can also plan steps towards the end of your project to introduce the deliverable to stakeholders in the form of demonstrations, question and answer forums, or marketing videos. You can factor all of these decisions into your plan so that any potential changes are less likely to impact your timeline. If these steps have not been built into your plan, you can escalate and stress the importance of a change management plan to your stakeholders. 
+
+#### Communicate about upcoming changes. 
+
+Communication should occur regularly among impacted stakeholders, the change management team, and the project team. Check in and communicate throughout the project about how the changes will provide a better experience for end users of the project deliverables. In this way, you support the process by providing everyone with the information they need to feel prepared to adjust to changes once the project is ready to launch. 
+
+#### Follow a consistent process. 
+Following a clear change management process helps maintain consistency each time there is a change. The change management process should be established and documented early on in your project to guide how the project will handle change. Your organization may also have an overarching change management plan that can be adopted for your project. This may include when the promotion of the change should happen, when training should occur, when the launch or release will occur, and corresponding steps for each phase of the process. 
+
+- Feedback mechanisms, such as surveys, can capture input from stakeholders.
+
+- [Flowcharts](https://www.lucidchart.com/pages/what-is-a-flowchart-tutorial) can visualize the project's development process.
+
+- [Culture mapping](https://www.strategyzer.com/library/the-culture-map-a-systematic-intentional-tool-for-designing-great-company-culture) can illustrate the company's culture and how the company's values, norms, and employees behavior may be affected by the change.
+
+As the project manager, you are responsible for successfully delivering projects. As you hone the skill set you acquire throughout this program, you will find that change management is essential to your projects’ success.
+
+For more on how to participate in the change management process, check out the following resources:
+
+- [Change Management at the Project Level](https://www.prosci.com/blog/change-management-at-the-project-level)
+- [5 Steps to Successful End-User Adoption](https://www.prosci.com/blog/change-management-at-the-project-level) 
+- [Change Management Framework](https://www.prosci.com/blog/change-management-at-the-project-level)
+
+- [Presentation](https://www.coursera.org/learn/project-management-foundations/supplement/fHd1o/a-project-managers-role-in-change-management) 
