feat: adjust index

--- a/2. Projec_management.md
+++ b/2. Projec_management.md
@@ -1,6 +1,8 @@
 
 
-[Project Life Cycle]
+[Project Life Cycle](#the-project-life-cycle)
+[Learning Organizations Culture](#learning-organizations-culture)
+[Change Management](#change-management)
 
 ## The project life cycle
 
