feat: update 6 jun

--- a/2. Projec_management.md
+++ b/2. Projec_management.md
@@ -146,3 +146,36 @@ For more on how to participate in the change management process, check out the f
 - [Change Management Framework](https://www.prosci.com/blog/change-management-at-the-project-level)
 
 - [Presentation](https://www.coursera.org/learn/project-management-foundations/supplement/fHd1o/a-project-managers-role-in-change-management) 
+
+## Corporate and project governance
+
+Governance in business is the management framework within which decisions are made and accountability and responsibility are determined. In simple terms, governance is understanding who is in charge.
+
+### Corporate governance
+Each organization is governed by its own set of standards and practices that direct and control its actions. Those standards and practices are called corporate governance, and they will influence your projects. 
+
+### Project governance
+Project governance is the framework for how project decisions are made. Project governance helps keep projects running smoothly, on time, and within budget. Project governance involves all the key elements that make a project successful. It tells you what activities an organization does and who is responsible for those activities. Project governance covers policies, regulations, functions, processes, procedures, and responsibilities. 
+
+### How project and corporate governance intersect
+Project governance needs to be tailored to your organization's specific needs. These needs will influence how you implement and monitor the governance framework on your project. Project governance concerns those areas of corporate governance that are specifically related to project activities. Effective project governance ensures that an organization’s projects are aligned to the organization’s larger objectives, are delivered efficiently, and are sustainable. This includes:
+
+- Considering the long- and short-term interests of your organization
+- Making thoughtful decisions about which projects to take on and avoiding projects if you do not have sufficient resources
+- Providing timely, relevant, and reliable information to the board of directors and other major stakeholders 
+- Eliciting the input and buy-in of senior managers since they are the decision-makers 
+- During the initiation phase, prioritizing clear, reachable, and sustainable goals in order to reduce confusion and conflict
+- During the planning phase, assigning ownership and accountability to an experienced team to deliver, monitor, and control the process 
+- During the execution phase, learning from mistakes and adapting to new or improved knowledge
+
+# Project Initiation 
+## Performing a cost-benefit analysis
+Cost-benefit analysis is the process of adding up the expected value of a project—the benefits—and comparing them to the dollar costs. In this reading, we will discuss the benefits of conducting a cost-benefit analysis, guiding questions to help you and your stakeholders conduct one, and how to calculate return on investment (ROI).
+
+
+
+### The benefits of a cost-benefit analysis
+A cost-benefit analysis can minimize risks and maximize gains for projects and organizations. It can help you communicate clearly with stakeholders and executives and keep your project on track. Because this type of analysis uses objective data, it can help reduce biases and keep stakeholder self-interest from influencing decisions. 
+
+Comparing a project’s benefits to its costs can help you make a strong business case to stakeholders and leadership and ensure your organization pursues the most profitable or useful projects. Organizations use cost-benefit analysis to reduce waste and invest their resources responsibly.
+
