--- a/2. Projec_management.md
+++ b/2. Projec_management.md
@@ -1,5 +1,6 @@
 
 
+## Index
 [Project Life Cycle](#the-project-life-cycle)
 [Learning Organizations Culture](#learning-organizations-culture)
 [Change Management](#change-management)
@@ -179,3 +180,37 @@ A cost-benefit analysis can minimize risks and maximize gains for projects and o
 
 Comparing a project’s benefits to its costs can help you make a strong business case to stakeholders and leadership and ensure your organization pursues the most profitable or useful projects. Organizations use cost-benefit analysis to reduce waste and invest their resources responsibly.
 
+### Guiding questions for a cost-benefit analysis
+When you’re pursuing a project, the benefits should outweigh the costs. It’s important for you and your stakeholders to consider questions like the ones that follow early on, while you prepare the proposal.
+
+To determine the benefits of a project, you might ask:
+
+- What value will this project create? 
+- How much money could this project save our organization? 
+- How much money will it bring in from existing customers?
+- How much time will it save? 
+- How will it improve the customer experience?
+- And to determine the costs of a project, consider questions such as:
+- How much time will people have to spend on this project?
+- What are the one-time costs?
+- Are there any ongoing costs?
+- What about long-term costs? 
+
+You might also consider questions about intangible benefits. These are gains that are not quantifiable, such as:
+
+- Customer satisfaction. Will the project increase customer retention, causing them to spend more on the company’s products or services? 
+- Employee satisfaction. Is the project likely to improve employee morale, reducing turnover? 
+- Employee productivity. Will the project reduce employee’s overtime hours, saving the company money?
+- Brand perception. Is the project likely to improve the company’s brand perception and recognition, attracting more customers or providing a competitive advantage?
+
+You can also flip these questions to consider intangible costs. These are costs that are not quantifiable. For example, might the project put customer retention, employee satisfaction, or brand perception at risk?
+
+### Calculating costs and benefits
+The process of calculating costs and benefits is also called calculating return on investment, or ROI. There are many ways to determine a project’s ROI, but the easiest way is to compare the upfront and ongoing costs to its benefits over time.
+
+![alt text](image.png)
+
+In this formula, G represents the financial gains you expect from the project, and C represents the upfront and ongoing costs of your investment in the project.
+
+- [Cost Benefit Analysis for Projects – A Step-by-Step Guide](https://www.projectmanager.com/blog/cost-benefit-analysis-for-projects-a-step-by-step-guide)
+- [Cost Benefit or Benefit Cost Analysis](https://pmstudycircle.com/cost-benefit-or-benefit-cost-analysis/#:~:text=Cost%2Dbenefit%20analysis%20is%20a,during%20the%20project%20selection%20analysis)
