feat: 6 jun update

--- a/2. Projec_management.md
+++ b/2. Projec_management.md
@@ -214,3 +214,83 @@ In this formula, G represents the financial gains you expect from the project, a
 
 - [Cost Benefit Analysis for Projects – A Step-by-Step Guide](https://www.projectmanager.com/blog/cost-benefit-analysis-for-projects-a-step-by-step-guide)
 - [Cost Benefit or Benefit Cost Analysis](https://pmstudycircle.com/cost-benefit-or-benefit-cost-analysis/#:~:text=Cost%2Dbenefit%20analysis%20is%20a,during%20the%20project%20selection%20analysis)
+
+
+## SMART goals: Making goals meaningful
+
+Specific, Measurable, Attainable, Relevant, and Time-bound (SMART) goals are very helpful for ensuring project success. As you start your career in project management, you may not directly set the project goals, but you should be able to clarify and understand them. SMART goals help you see the full scope of a goal, determine its feasibility, and clearly define project success in concrete terms. 
+
+- Specific: The objective has no ambiguity for the project team to misinterpret. 
+- Measurable: Metrics help the project team determine when the objective is met.
+- Attainable: The project team agrees the objective is realistic.
+- Relevant: The goal fits the organization’s strategic plan and supports the project charter.
+- Time-bound: The project team documents a date to achieve the goal.
+
+### Focusing on the "M" in SMART
+Let’s take a moment to zoom in on the M in SMART, which stands for measurable. Having measurable goals allows you to assess the success of your project based on quantifiable or tangible metrics, such as dollar amounts, number of outputs, quantities, etc. Measurable goals are important because they leave little room for confusion around expectations from stakeholders. 
+
+Not every metric will have value, so you will have to determine which metrics make sense for the project. For example, measuring how many meetings the software engineers on your project attend on a weekly basis may not be the most valuable metric for a productivity goal. Alternatively, you might measure other aspects of the engineers’ productivity, such as a particular number of features created per engineer or a specific number of issues flagged per day.
+
+## Creating OKRs for your project
+
+OKR stands for objectives and key results. They combine a goal and a metric to determine a measurable outcome. 
+
+![alt text](image-1.png)
+
+OKRs and project management
+As a project manager, OKRs can help you expand upon project goals and further clarify the deliverables you’ll need from the project to accomplish those goals. Project-level OKRs help establish the appropriate scope for your team so that you can say “no” to requests that may get in the way of them meeting their objectives. You can also create and use project-level OKRs to help motivate your team since OKRs are intended to challenge you to push past what’s easily achievable. 
+
+#### Set your objectives
+Project objectives should be aspirational, aligned with organizational goals, action-oriented, concrete, and significant. Consider the vision you and your stakeholders have for your project and determine what you want the project team to accomplish in 3–6 months.
+
+Examples:
+- Build the most secure data security software 
+- Continuously improve web analytics and conversions
+- Provide a top-performing service
+- Make a universally-available app
+- Increase market reach
+- Achieve top sales among competitors in the region
+
+Strong objectives meet the following criteria. They are:
+- Aspirational
+- Aligned with organizational goals
+- Action-oriented
+- Concrete
+- Significant
+
+To help shape each objective, ask yourself and your team:
+- Does the objective help in achieving the project’s overall goals?
+- Does the objective align with company and departmental OKRs?
+- Is the objective inspiring and motivational?
+- Will achieving the objective make a significant impact?
+
+#### Develop key results
+Next, add 2–3 key results for each objective. Key results should be time-bound. They can be used to indicate the amount of progress to achieve within a shorter period or to define whether you’ve met your objective at the end of the project. They should also challenge you and your team to stretch yourselves to achieve more.
+
+Examples:
+- X% new signups within first quarter post launch
+- Increase advertiser spend by X% within the first two quarters of the year
+- New feature adoption is at least X% by the end of the year
+- Maximum 2 critical bugs are reported monthly by customers per Sprint
+- Maintain newsletter unsubscribe rate at X% this calendar year
+
+Strong key results meet the following criteria:
+- Results-oriented—not a task
+- Measurable and verifiable
+- Specific and time-bound
+- Aggressive yet realistic
+
+To help shape your key results, ask yourself and your team the following:
+- What does success mean?
+- What metrics would prove that we’ve successfully achieved the objective?
+
+Resources:
+Understanding the Unique Utility of OKRs vs. SMART Goals
+- [Google’s OKR playbook](https://www.smartsheet.com/content/okr-vs-smart-goals)
+- [Planning company goals](https://help.asana.com/hc/en-us/articles/17965094839067-Plan-and-manage-company-goals)
+- [OKRs and SMART goals: What's the difference?](https://www.whatmatters.com/resources/okrs-smart-goals-difference-between)
+- [OKRs and KPIs: What They Are and How They Work Together](https://www.reflektive.com/blog/okrs-and-kpis-what-they-are-and-how-they-work-together/)
+- [How OKR and project management work together](https://www.perdoo.com/resources/blog/okr-and-project-management)
+- [OKR Examples](https://business.adobe.com/blog/basics/okr-examples)
+- [OKR TED Talk video (John Doerr, the founder of OKRs, explains why the secret to success is setting the right goals.)](https://www.youtube.com/watch?v=L4N1q4RNi9I)
+
