--- a/2. Projec_management.md
+++ b/2. Projec_management.md
@@ -19,6 +19,8 @@ In this phase, ask questions to help set the foundation for the project, such as
 - What skills and resources will the project require? 
 - What will the project cost? What are the benefits?
 
+more info [here]()
+
 #### Make a plan
 In this phase, make a plan to get your project from start to finish. 
 
@@ -169,8 +171,9 @@ Project governance needs to be tailored to your organization's specific needs. T
 - During the planning phase, assigning ownership and accountability to an experienced team to deliver, monitor, and control the process 
 - During the execution phase, learning from mistakes and adapting to new or improved knowledge
 
-# Project Initiation 
-## Performing a cost-benefit analysis
+# 1. Project Initiation 
+
+## 1.1 Performing a cost-benefit analysis
 Cost-benefit analysis is the process of adding up the expected value of a project—the benefits—and comparing them to the dollar costs. In this reading, we will discuss the benefits of conducting a cost-benefit analysis, guiding questions to help you and your stakeholders conduct one, and how to calculate return on investment (ROI).
 
 
@@ -216,7 +219,9 @@ In this formula, G represents the financial gains you expect from the project, a
 - [Cost Benefit or Benefit Cost Analysis](https://pmstudycircle.com/cost-benefit-or-benefit-cost-analysis/#:~:text=Cost%2Dbenefit%20analysis%20is%20a,during%20the%20project%20selection%20analysis)
 
 
-## SMART goals: Making goals meaningful
+## 1.2 Setting your project goals
+
+SMART goals: Making goals meaningful
 
 Specific, Measurable, Attainable, Relevant, and Time-bound (SMART) goals are very helpful for ensuring project success. As you start your career in project management, you may not directly set the project goals, but you should be able to clarify and understand them. SMART goals help you see the full scope of a goal, determine its feasibility, and clearly define project success in concrete terms. 
 
@@ -294,3 +299,142 @@ Understanding the Unique Utility of OKRs vs. SMART Goals
 - [OKR Examples](https://business.adobe.com/blog/basics/okr-examples)
 - [OKR TED Talk video (John Doerr, the founder of OKRs, explains why the secret to success is setting the right goals.)](https://www.youtube.com/watch?v=L4N1q4RNi9I)
 
+
+**Share your OKRs with your team.** Once you’ve created OKRs for your project, it’s important to communicate them to your team so that everyone knows how to focus and align their efforts. You can do this by sharing a digital document, presenting them in a meeting, or adding them to an internal website. OKRs can help your project team stick to its goals, monitor which are falling short, and be continuously motivated to meet project objectives. 
+
+##### Measuring progress
+Measuring your OKRs is an important part of tracking and sharing your progress. One shortcut to determining the status of a project is to score or grade your OKRs. While scores or grades don’t provide a complete assessment of a project’s success, they’re helpful tools for determining how close you came to achieving your objectives. You can then share your OKR scores with project stakeholders and team members as part of your overall project updates.
+
+Determine how you will score your OKRs. OKRs can be scored in different ways. You can score based on a percentage of the objective completed, the completion of certain milestones, or a scale of 1 to 10, for example. You can also use a “traffic light” scoring approach, where red means you didn’t make any progress, yellow means you made some progress, and green means you completed your objective.
+
+The simplest approach to scoring OKRs is the “yes/no” method, with “yes” meaning you achieved your objective and “no” meaning you didn’t. Using this approach, a key result such as “Launch a new widget marketing campaign” might be graded a 1 or 0 depending on whether it was launched (1) or not (0). 
+
+
+
+## 1.3 Gathering information to define scope
+Define project scope status and differentiate in-scope, out-of-scope, and scope creep factors that affect reaching the project goal
+
+Asking scope-defining questions
+Imagine that while working in a restaurant management group, your manager calls and asks you to “update the dining space,” then quickly hangs up the phone without providing further instruction. In this initial handoff from the manager, you are missing a lot of information. How do you even know what to ask?
+
+Let’s quickly recap the concept of scope. The scope provides the boundaries for your project. You define the scope to help identify necessary resources, resource costs, and a schedule for the project. 
+
+In the situation we just described, here are some questions you might ask your manager in order to get the information you need to define the scope of the project:
+
+
+#### Stakeholders
+- How did you arrive at the decision to update the dining space? 
+- Did the request originate from the restaurant owner, customers, or other stakeholders? 
+- Who will approve the scope for the project? 
+
+#### Goals
+- What is the reason for updating the dining space? 
+- What isn't working in the current dining space? 
+- What is the end goal of this project? 
+
+#### Deliverables
+- Which dining space is being updated? 
+- What exactly needs to be updated? 
+- Does the dining space need a remodel? 
+
+#### Resources
+- What materials, equipment, and people will be needed? 
+- Will we need to hire contractors? 
+- Will we need to attain a floor plan and building permits? 
+
+#### Budget
+- What is the budget for this project? Is it fixed or flexible? 
+
+#### Schedule
+- How much time do we have to complete the project? 
+- When does the project need to be completed? 
+
+#### Flexibility
+- How much flexibility is there? 
+- What is the highest priority: hitting the deadline, sticking to the budget, or making sure the result meets all the quality targets? 
+
+Taking the time to ask questions and ensure that you understand the scope of the project will help reduce expenses, rework, frustration, and confusion. Make sure you understand the who, what, when, where, why, and how as it applies to the scope. If you are missing any of that information, focus your questions on those elements. The initiation phase of the project sets the foundation for the project, so ensuring that you understand the scope and expectations during this stage is essential. 
+
+## 1.4 Strategies for controlling scope creep
+
+### Scope management best practices
+The scope of a project can get out of control quickly—so quickly that you may not even notice it. Scope creep is when a project’s work starts to grow beyond what was originally agreed upon during the initiation phase. Scope creep can put stress on you, your team, and your organization, and it can put your project at risk. The effects of scope creep can hinder every aspect of the project, from the schedule to the budget to the resources, and ultimately, its overall success. 
+
+- **Define your project’s requirements.** Communicate with your stakeholders or customers to find out exactly what they want from the project and document those requirements during the initiation phase. 
+
+- **Set a clear project schedule.** Time and task management are essential for sticking to your project’s scope. Your schedule should outline all of your project’s requirements and the tasks that are necessary to achieve them.
+
+- **Determine what is out of scope.** Make sure your stakeholders, customers, and project team understand when proposed changes are out of scope. Come to a clear agreement about the potential impacts to the project and document your agreement. 
+
+- **Provide alternatives.** Suggest alternative solutions to your customer or stakeholder. You can also help them consider how their proposed changes might create additional risks. Perform a cost-benefit analysis, if necessary.
+
+- **Set up a change control process.** During the course of your project, some changes are inevitable. Determine the process for how each change will be defined, reviewed, and approved (or rejected) before you add it to your project plan. Make sure your project team is aware of this process.
+
+- **Learn how to say no.** Sometimes you will have to say no to proposed changes. Saying no to a key stakeholder or customer can be uncomfortable, but it can be necessary to protect your project’s scope and its overall quality. If you are asked to take on additional tasks, explain how they will interfere with the budget, timeline, and/or resources defined in your initial project requirements. 
+
+- **Collect costs for out-of-scope work.** If out-of-scope work is required, be sure to document all costs incurred. That includes costs for work indirectly impacted by the increased scope. Be sure to indicate what the charges are for. 
+
+### Triple Constraints of Project Management Explained & Simplified
+"Do you want fast, cheap, or good?" That's the essential question of the project management triangle, a.k.a., the triple constraints. As with an actual triangle, you can't adjust one side without impacting the others.
+
+The triple constraints in project management are scope, time, and cost.
+
+- **Scope:** The deliverables and activities required to achieve a project's goals.
+- **Time:** The schedule required to be followed to deliver a project on time.
+- **Cost:** The budget, required to limit the resources used to deliver a project.
+
+A project can be fast, cheap or good, but it can't be all three simultaneously. Quality will suffer.
+
+Actionable Tips For Managing The Triple Constraint 
+Here's a quick visual overview and guide of how to manage the triple constraint in real life.
+
+![alt text](image-2.png)
+[source](https://thedigitalprojectmanager.com/projects/scope-management/triple-constraint/)
+
+
+## 1.5 Don't forget to land: Measuring project success
+
+You will often hear companies celebrating the launch of a new product, service, or initiative, and it is important to remember that even when your project is out in the world, your work isn’t complete. When working on a project, the goal isn’t simply to launch it, but to land it. Landings occur once your project achieves a measure of success. As project managers, landings are what we strive for and what we celebrate. They are the ultimate reward for all of our efforts. 
+
+#### Launching vs. landing a project
+In project management, a project “launching” means you have delivered the final results of the project to the client or user. You can’t solely base project success on when the client accepts the project, though. Your work on a project won’t be complete until you “land” it by thoroughly measuring the results. This is when the **success criteria** and the metrics you defined initially when setting SMART goals will come in handy.  
+
+Teams should be clear on what they are trying to accomplish, beyond just launching something to users. Will your project increase retention? Will your project speed up a product feature? Depending on the product and situation, the answers will differ, but it is important that your team aligns and works toward the same measurable goal. 
+
+
+#### Tracking and communicating success criteria
+
+Product quality 
+The product, or final result, of a project has its own set of attributes that define success. The product attributes that are necessary for the product’s success include completeness in features, quality of features, unit cost, usability, etc. The extent that a product is complete will contribute to the product’s success. This can apply to any project in which you deliver a product or tangible outcome at the end. To keep us on track for success, we can create a list of product requirements to ensure that you do not miss anything. For example, if the project produces word processing software, you need basic features like text entry, formatting, saving, and printing. Since you require each feature to have a functional word processor by today’s standards, you include these features on your checklist. 
+
+To measure the success of a product, consider including these metrics on your checklist: 
+
+- Track if you implemented the product’s priority requirements
+- Track and assess the product’s number of technical issues or defects
+- Measure the percentage of features you delivered or released at the end of the project
+
+
+#### What is important to the customers or stakeholders 
+We have to pay attention to product metrics, but we also have to be mindful of stakeholder and customer additional expectations for features and objectives. In the word processor example, a stakeholder may want to add an additional functionality to easily create tables in a document with text. Additionally, a strategic goal of the organization could be to create word processor software with more collaborative ability than the word processors currently on the market. Each component is necessary in order to meet customer and stakeholder expectations. Think about what needs the project satisfies for your stakeholders or customers. These strategic goals tie back to the business case and the reason you initiated the project in the first place. Often, you can measure the fulfillment of strategic goals via user or customer metrics. Metrics to consider include:
+
+- Evaluating user engagement with the product 
+- Measuring stakeholder and customer satisfaction via surveys
+- Tracking user adoption of the product by using sales data
+
+#### Document, align, and communicate success
+Understanding where we are and where we are going helps the project team determine if they are on track. As you learned in the video on this topic, you need to get clarity from stakeholders on the project requirements and expectations. There are many people involved with any project, and success will look different for each of them. You want to ask questions, such as: 
+- Who ultimately says whether or not the project is successful? 
+- What criteria will be measured to determine success? 
+- What is the success of this project based on? 
+- It is best practice to get the key stakeholders or the steering committee to review and approve your success criteria. This becomes a mutual agreement on how all parties define the success of the project.
+
+Success criteria template click [Here](https://docs.google.com/document/d/1E3OwXHMb25DpWHeJXzff9wqjuJSO6KH9aijNUAIUNpQ/template/preview?resourcekey=0-vgOO8PhLm_19ztOHb4eLJw)
+
+#### Understand, assess and adapt
+I believe that there needs to be a three-step approach to dealing with these situations, and the same approach can be applied whether it is your first project or if you have been managing projects for years. It’s just likely to become more of a subconscious effort with experience. Those three steps are:
+1. Understand – What is the position each stakeholder has?
+2. Assess – How does that position compare with the organizational view of the project?
+3. Adapt – Adjust elements of the project to manage any variance between views and
+perspectives.
+
+## 1.6 The building blocks of a project dream team
