feat: 6 june commit

--- a/2. Projec_management.md
+++ b/2. Projec_management.md
@@ -438,3 +438,26 @@ I believe that there needs to be a three-step approach to dealing with these sit
 perspectives.
 
 ## 1.6 The building blocks of a project dream team
+
+Too big, too small, or just right?
+Once you lay the foundation for your project by outlining your goals and expectations, it is time to build your dream team! Though before we can build our dream team, we need to figure out how many people we need. This number will largely depend on the size of the project itself. Complex projects with large divisions of work will usually require larger project teams. Simple projects with straightforward expectations may only require a few people on the project team. 
+
+- **Technical skills** are highly valued, but they are not the only skills that are important for high functioning teams. 
+
+- **Problem-solving skills** are a must for all team members, especially when it comes to large, complex projects. As a project manager, you will not be able to solve every problem for your team. At some point, they will need to use their own judgment to problem-solve and get the work done. 
+
+- An underrated skill set for project team members are leadership skills. Strong **leadership skills** help team members navigate organizational boundaries and effectively communicate with stakeholders to generate buy-in. 
+
+##### Who is available?
+In projects, the availability of your team is always a big concern. This is especially true in Matrix organizations, where team members have multiple bosses. It is not uncommon to pull a team member onto another project before your project is complete. In a perfect world, you only pick those who can stay on the project for its entire life cycle. You may find that you don’t get to pick certain members of your team at all, which is called a pre-assignment. In these cases, the sponsor assigns team members to your project
+
+##### What motivates them?
+Be sure to take note of the motivation level of your team members and the impact it may have on your project. Just because a person is pre-assigned to a project, doesn’t necessarily mean they have low interest in it, but a person who proactively volunteered for it may have additional motivation to do the work.
+
+##### Essential project roles
+- Project Manager
+- Stakeholders
+    - Primary stakeholders: directly affected by the outcome of the project
+    - Secondary stakeholders: indirectly affected by the outcome of the project
+- Project team members
+- Sponsor
