--- a/Levels A1 and A2/4. Prepositions_of_place in,on,at.md
+++ b/Levels A1 and A2/4. Prepositions_of_place in,on,at.md
@@ -70,3 +70,7 @@ We also use at for addresses or exact positions.
 - We live in London
 - She's at the bathroom
 - Celina at the office until late
+- The cup is on the table
+- I'm at the toilet
+- I'm at the disco ready for partying
+
