feat: name change

--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -404,7 +404,7 @@ Teams should be clear on what they are trying to accomplish, beyond just launchi
 
 #### Tracking and communicating success criteria
 
-Product quality 
+##### Product quality 
 The product, or final result, of a project has its own set of attributes that define success. The product attributes that are necessary for the product’s success include completeness in features, quality of features, unit cost, usability, etc. The extent that a product is complete will contribute to the product’s success. This can apply to any project in which you deliver a product or tangible outcome at the end. To keep us on track for success, we can create a list of product requirements to ensure that you do not miss anything. For example, if the project produces word processing software, you need basic features like text entry, formatting, saving, and printing. Since you require each feature to have a functional word processor by today’s standards, you include these features on your checklist. 
 
 To measure the success of a product, consider including these metrics on your checklist: 
@@ -461,3 +461,7 @@ Be sure to take note of the motivation level of your team members and the impact
     - Secondary stakeholders: indirectly affected by the outcome of the project
 - Project team members
 - Sponsor
+
+## 1.7 Prioritizing stakeholders and generating their buy-in
+
+learning to complete a stakeholder analysis and explain its significance. Let’s focus here on how to prioritize the various types of stakeholders that can exist on a project, generate stakeholder buy-in, and manage their expectations
